--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "singleQuote": true,
     "trailingComma": "all"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/icons": "4.9.1"
+  },
   "peerDependencies": {
     "@jbrowse/core": "^1.0.3"
   },
