--- a/package.json
+++ b/package.json
@@ -44,19 +44,26 @@
     "@material-ui/icons": "4.9.1"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^1.0.3"
+    "@jbrowse/core": "^1.0.3",
+    "@jbrowse/plugin-linear-genome-view": "^1.0.2",
+    "@jbrowse/plugin-sequence": "^1.0.2",
+    "@jbrowse/plugin-svg": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.10.4",
-    "@jbrowse/core": "^1.0.3",
+    "@jbrowse/core": "file:///home/garrett/tmp/jbrowse-core-v1.0.3-alpha.1.tgz",
     "@jbrowse/development-tools": "^1.0.3",
+    "@jbrowse/plugin-linear-genome-view": "^1.0.2",
+    "@jbrowse/plugin-sequence": "^1.0.2",
+    "@jbrowse/plugin-svg": "^1.0.2",
     "@material-ui/core": "^4.9.13",
     "@material-ui/lab": "^4.0.0-alpha.45",
-    "@types/react": "^17.0.0",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
     "mobx": "^5.0.0",
     "mobx-react": "^6.0.0",
     "mobx-state-tree": "3.14.1",
     "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "rxjs": "^6.0.0",
     "serve": "^11.3.2",
     "tslib": "^2.0.3",
