--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "@jbrowse/development-tools": "^1.0.3",
     "@material-ui/core": "^4.9.13",
     "@material-ui/lab": "^4.0.0-alpha.45",
-    "@types/react": "^17.0.0",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "mobx": "^5.0.0",
     "mobx-react": "^6.0.0",
     "mobx-state-tree": "3.14.1",
     "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "rxjs": "^6.0.0",
     "serve": "^11.3.2",
     "tslib": "^2.0.3",
