--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@babel/preset-react": "^7.10.4",
     "@jbrowse/core": "^1.0.3",
     "@jbrowse/development-tools": "^1.0.3",
+    "@jbrowse/plugin-linear-genome-view": "^1.0.3",
+    "@jbrowse/plugin-sequence": "^1.0.2",
     "@material-ui/core": "^4.9.13",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@types/react": "^16.8.0",
