--- a/package.json
+++ b/package.json
@@ -40,9 +40,14 @@
     "singleQuote": true,
     "trailingComma": "all"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/icons": "4.9.1"
+  },
   "peerDependencies": {
-    "@jbrowse/core": "^1.0.3"
+    "@jbrowse/core": "^1.0.3",
+    "@jbrowse/plugin-linear-genome-view": "^1.0.2",
+    "@jbrowse/plugin-sequence": "^1.0.2",
+    "@jbrowse/plugin-svg": "^1.0.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.4",
@@ -50,6 +55,7 @@
     "@jbrowse/development-tools": "^1.0.3",
     "@jbrowse/plugin-linear-genome-view": "^1.0.3",
     "@jbrowse/plugin-sequence": "^1.0.2",
+    "@jbrowse/plugin-svg": "^1.0.2",
     "@material-ui/core": "^4.9.13",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@types/react": "^16.8.0",
