--- a/package.json
+++ b/package.json
@@ -41,22 +41,24 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@material-ui/icons": "4.9.1"
+    "@material-ui/icons": "4.9.1",
+    "copy-to-clipboard": "^3.3.1"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^1.0.3",
+    "@jbrowse/core": "file:///Users/peterxie/Documents/GitHub/jbrowse-plugin-apollo/jbrowse-core-v1.1.0.tgz",
     "@jbrowse/plugin-linear-genome-view": "^1.0.2",
     "@jbrowse/plugin-sequence": "^1.0.2",
     "@jbrowse/plugin-svg": "^1.0.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.4",
-    "@jbrowse/core": "^1.0.3",
+    "@jbrowse/core": "file:///Users/peterxie/Documents/GitHub/jbrowse-plugin-apollo/jbrowse-core-v1.1.0.tgz",
     "@jbrowse/development-tools": "^1.0.3",
     "@jbrowse/plugin-linear-genome-view": "^1.0.3",
     "@jbrowse/plugin-sequence": "^1.0.2",
     "@jbrowse/plugin-svg": "^1.0.2",
     "@material-ui/core": "^4.9.13",
+    "@material-ui/data-grid": "^4.0.0-alpha.23",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
@@ -69,6 +71,9 @@
     "serve": "^11.3.2",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "@rollup/plugin-commonjs": "11.0.2"
   },
   "private": true
 }
