more added to organism modal, add cell editing to dbxref and coding

--- a/package.json
+++ b/package.json
@@ -42,17 +42,18 @@
   },
   "dependencies": {
     "@material-ui/icons": "4.9.1",
-    "copy-to-clipboard": "^3.3.1"
+    "copy-to-clipboard": "^3.3.1",
+    "rollup-plugin-node-globals": "^1.4.0"
   },
   "peerDependencies": {
-    "@jbrowse/core": "file:///Users/peterxie/Documents/GitHub/jbrowse-plugin-apollo/jbrowse-core-v1.1.0.tgz",
+    "@jbrowse/core": "file:///Users/peterxie/Documents/GitHub/jbrowse-plugin-apollo/jbrowse-core-v1.1.0-beta.tgz",
     "@jbrowse/plugin-linear-genome-view": "^1.0.2",
     "@jbrowse/plugin-sequence": "^1.0.2",
     "@jbrowse/plugin-svg": "^1.0.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.4",
-    "@jbrowse/core": "file:///Users/peterxie/Documents/GitHub/jbrowse-plugin-apollo/jbrowse-core-v1.1.0.tgz",
+    "@jbrowse/core": "file:///Users/peterxie/Documents/GitHub/jbrowse-plugin-apollo/jbrowse-core-v1.1.0-beta.tgz",
     "@jbrowse/development-tools": "^1.0.3",
     "@jbrowse/plugin-linear-genome-view": "^1.0.3",
     "@jbrowse/plugin-sequence": "^1.0.2",
@@ -67,6 +68,7 @@
     "mobx-state-tree": "3.14.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rxjs": "^6.0.0",
     "serve": "^11.3.2",
     "tslib": "^2.0.3",
