--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@casl/ability": "^5.4.3",
     "@nestjs/common": "^8.0.11",
     "@nestjs/core": "^8.0.11",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "passport": "^0.5.0",
