Added new endpoint to get users and their roles

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
   "username": "apollo",
   "password": "apollo123",
   "database": "apollo-production",
-  "synchronize": true,
+  "synchronize": false,
   "logging": false,
   "entities": [
      "src/entity/**/*.ts"
