--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "string-builder": "^0.1.8",
     "typeorm": "^0.2.38"
   },
   "devDependencies": {
