--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,13 +7,7 @@
   "database": "apollo-production",
   "synchronize": false,
   "logging": false,
-  "entities": [
-     "src/entity/**/*.ts"
-  ],
-  "migrations": [
-     "src/migration/**/*.ts"
-  ],
-  "subscribers": [
-     "src/subscriber/**/*.ts"
-  ]
+  "entities": ["src/entity/**/*.ts"],
+  "migrations": ["src/migration/**/*.ts"],
+  "subscribers": ["src/subscriber/**/*.ts"]
 }
