--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@casl/ability": "^5.4.3",
     "@nestjs/common": "^8.0.11",
+    "@nestjs/config": "^1.0.3",
     "@nestjs/core": "^8.0.11",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
