--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
@@ -40,7 +41,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "string-builder": "^0.1.8",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "typeorm-transactional-cls-hooked": "^0.1.21"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.2",
