--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.9.0",
+    "import-sort-parser-typescript": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "prettier-plugin-import-sort": "^0.0.7",
     "react": "^17.0.2",
     "typescript": "^4.4.4"
   },
