--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/multer": "^1.4.7",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
