--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "4.4.4"
+  },
+  "resolutions": {
+    "typescript": "4.4.4"
   },
   "private": true
 }
