--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -59,7 +59,10 @@
     "ts-node": "^10.3.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.4.4"
+  },
+  "resolutions": {
+    "typescript": "4.4.4"
   },
   "jest": {
     "moduleFileExtensions": [
