--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -17,10 +17,6 @@
     "src"
   ],
   "config": {
-    "port": 9000,
-    "browse": {
-      "port": 8999
-    },
     "jbrowse": {
       "plugin": {
         "name": "Apollo"
@@ -77,7 +73,10 @@
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.4.4"
+  },
+  "resolutions": {
+    "typescript": "4.4.4"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
