Issues 13 and 14 ready. Issue 15 input JSON object must still be adjusted

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -5,3 +5,16 @@ TYPEORM_PASSWORD = apollo123
 TYPEORM_DATABASE = apollo
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
+
+# Output folder for uploaded files
+UPLOADED_OUTPUT_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
+# Search folder for files
+FILE_SEARCH_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
+# Default GFF3 file that will be loaded at startup
+GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.gff3.txt'
+# Default filename to save new GFF3 log file
+GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.v1.gff3.txt'
+# Log file to track requested changes to GFF3 file
+GFF3_CHANGELOG_FILENAME = 'gff3ChangeLog.txt'
+}
+
