Don't auto-open session file in dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
           "authProtocol": "xprotocol"
         }
       }
-    ]
+    ],
+    "sqltools.autoOpenSessionFiles": false
   },
 
   // Add the IDs of extensions you want installed when the container is created.
