--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -48,10 +48,13 @@
     ]
   },
   "dependencies": {
+    "@jbrowse/plugin-linear-genome-view": "^1.5.1",
+    "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
     "@jbrowse/core": "^1.5.2",
+    "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
     "react": "^17.0.2"
   },
@@ -64,6 +67,7 @@
     "@types/react": "^17.0.34",
     "cypress": "^8.7.0",
     "jest": "^27.3.1",
+    "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
     "npm-run-all": "4.1.5",
     "react": "^17.0.2",
