Implemented Garrett enhancements

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -16,5 +16,7 @@ GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.gff3.txt'
 GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.v1.gff3.txt'
 # Log file to track requested changes to GFF3 file
 GFF3_CHANGELOG_FILENAME = 'gff3ChangeLog.txt'
+# Application start port
+APPLICATION_PORT = 3000
 }
 
