--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/multer": "^1.4.7",
+    "cache-manager": "^3.6.0",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
@@ -41,12 +42,15 @@
     "string-builder": "^0.1.8",
     "tslib": "^2.3.1",
     "typeorm": "^0.2.38",
-    "typeorm-transactional-cls-hooked": "^0.1.21"
+    "typeorm-transactional-cls-hooked": "^0.1.21",
+    "@gmod/gff": "^1.1.2"
   },
   "devDependencies": {
+    "@gmod/gff": "^1.1.2",
     "@nestjs/cli": "^8.1.2",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "^3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
