Remove .txt ext from gff3, change default port

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -11,12 +11,10 @@ UPLOADED_OUTPUT_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
 # Search folder for files
 FILE_SEARCH_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
 # Default GFF3 file that will be loaded at startup
-GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.gff3.txt'
+GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.gff3'
 # Default filename to save new GFF3 log file
-GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.v1.gff3.txt'
+GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.v1.gff3'
 # Log file to track requested changes to GFF3 file
 GFF3_CHANGELOG_FILENAME = 'gff3ChangeLog.txt'
 # Application start port
-APPLICATION_PORT = 3000
-}
-
+APPLICATION_PORT = 3999
