--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -54,6 +54,7 @@
   },
   "peerDependencies": {
     "@jbrowse/core": "^1.5.0",
+    "@material-ui/core": "^4.12.3",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
     "react": "^17.0.2"
@@ -62,6 +63,7 @@
     "@jbrowse/cli": "^1.5.1",
     "@jbrowse/core": "^1.5.0",
     "@jbrowse/development-tools": "^1.5.1",
+    "@material-ui/core": "^4.12.3",
     "@types/cypress": "^1.1.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
