Added values to env. variable, changed CORS settings, changed Response handling

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -18,3 +18,7 @@ GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.v1.gff3'
 GFF3_CHANGELOG_FILENAME = 'gff3ChangeLog.txt'
 # Application start port
 APPLICATION_PORT = 3999
+# CORS setting
+CORS = true
+# Logger options. Possible values are : log, error, warn, debug, verbose
+LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
