Added new endpoints to upload and download file

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -8,6 +8,8 @@ TYPEORM_SYNCHRONIZE = false
 
 # Output folder for uploaded files
 UPLOADED_OUTPUT_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
+# Output folder for uploaded files
+DOWNLOADED_OUTPUT_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
 # Search folder for files
 FILE_SEARCH_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
 # Default GFF3 file that will be loaded at startup
