Initial Apollo entities classes
Co-authored-by: Robert Buels <rbuels@gmail.com>

--- a/packages/jbrowse-plugin-apollo/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "noEmit": true,
+    "downlevelIteration": true
   },
   "include": ["src"],
   "exclude": ["**/dist/"]
