Add local test data

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -7,9 +7,9 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 
 # Output folder for uploaded files
-UPLOADED_OUTPUT_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
+UPLOADED_OUTPUT_FOLDER = './test/data'
 # Search folder for files
-FILE_SEARCH_FOLDER = '/Users/kyosti/src/Apollo/tmp/'
+FILE_SEARCH_FOLDER = './test/data'
 # Default GFF3 file that will be loaded at startup
 GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.gff3'
 # Default filename to save new GFF3 log file
