--- a/packages/apollo-collaboration-server/tsconfig.json
+++ b/packages/apollo-collaboration-server/tsconfig.json
@@ -11,9 +11,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
     "noImplicitAny": false,
-    "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
   }
