--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -48,6 +48,9 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "mobx-react": "^7.2.1",
+    "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
