--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: '14'
       - name: Install deps (with cache)
         uses: bahmutov/npm-install@v1
+        with:
+          install-command: yarn --immutable
       - name: Lint codebase
         run: yarn eslint --ext .js,.ts,.jsx,.tsx .
       - name: Build collaboration server
