--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -48,7 +48,7 @@
     ]
   },
   "dependencies": {
-    "@gmod/gff": "portal:/home/garrett/Projects/gff-js",
+    "@gmod/gff": "^1.2.0",
     "@jbrowse/plugin-linear-genome-view": "^1.5.1",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
