--- a/packages/jbrowse-plugin-apollo/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "rootDir": "./src",
     "noEmit": true,
-    "downlevelIteration": true
   },
   "include": ["src"],
-  "exclude": ["**/dist/"]
+  "exclude": ["**/dist/"],
+  "references": [
+    { "path": "../apollo-shared"},
+  ],
 }
