--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build collaboration server
         run: yarn build
         working-directory: packages/apollo-collaboration-server
-      # - name: Build plugin
-      #   run: yarn build
-      #   working-directory: jbrowse-plugin-apollo
+      - name: Build plugin
+        run: yarn build
+        working-directory: packages/jbrowse-plugin-apollo
+      - name: Build sahred
+        run: yarn build
+        working-directory: packages/apollo-shared
