--- a/packages/apollo-collaboration-server/tsconfig.json
+++ b/packages/apollo-collaboration-server/tsconfig.json
@@ -7,13 +7,14 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
-    "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "strictPropertyInitialization": false,
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-  }
+  },
+  "references": [
+    { "path": "../apollo-shared"},
+  ],
 }
