Initial commit for LoginWidget

--- a/packages/jbrowse-plugin-apollo/jbrowse_config.json
+++ b/packages/jbrowse-plugin-apollo/jbrowse_config.json
@@ -135,5 +135,15 @@
         }
       }
     }
+  ],
+  "internetAccounts": [
+    {
+      "type": "ApolloInternetAccount",
+      "internetAccountId": "apolloInternetAccount",
+      "name": "apollo",
+      "description": "For apollo",
+      "domains": [],
+      "authenticationURL": "http://localhost:3999/auth/login"
+    }
   ]
 }
