--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -7,13 +7,15 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 
 # Output folder for uploaded files
-UPLOADED_OUTPUT_FOLDER = './test/data'
+UPLOADED_OUTPUT_FOLDER = './test/data/uploaded'
 # Search folder for files
 FILE_SEARCH_FOLDER = './test/data'
+# Output folder for uploaded files
+DOWNLOADED_OUTPUT_FOLDER = './test/data/downloaded'
 # Default GFF3 file that will be loaded at startup
-GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.gff3'
+GFF3_DEFAULT_FILENAME_AT_STARTUP = 'volvox.sort.fasta.gff3'
 # Default filename to save new GFF3 log file
-GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.v1.gff3'
+GFF3_DEFAULT_FILENAME_TO_SAVE = 'volvox.sort.fasta.gff3.demoSave'
 # Log file to track requested changes to GFF3 file
 GFF3_CHANGELOG_FILENAME = 'gff3ChangeLog.txt'
 # Application start port
