--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,9 +32,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/multer": "^1.4.7",
+    "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
+    "mobx": "^5.10.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "passport": "^0.5.0",
