--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,12 +16,24 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
+    "@nestjs/common": "^8.3.1",
+    "cache-manager": "^3.6.0",
+    "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
     "mobx-state-tree": "3.14.1",
+    "path": "^0.12.7",
+    "promise-fs": "^2.1.1",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/cache-manager": "^3",
+    "@types/promise-fs": "^2",
     "typescript": "4.4.4"
+  },
+  "peerDependencies": {
+    "mobx": "^5.10.1"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
