--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,7 +1,6 @@
 {
   "name": "apollo-shared",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc"
   },
@@ -14,6 +13,9 @@
   },
   "devDependencies": {
     "typescript": "4.4.4"
+  },
+  "peerDependencies": {
+    "mobx": "^5.10.1"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
