--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -8,11 +8,11 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "yarn build:shared && rimraf dist && nest build",
+    "build": "yarn build:shared:cjs && rimraf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "yarn build:shared && NODE_ENV=development nest start",
-    "start:dev": "yarn build:shared && NODE_ENV=development nest start --watch",
-    "start:debug": "yarn build:shared && NODE_ENV=development nest start --debug --watch",
+    "start": "yarn build:shared:cjs && NODE_ENV=development nest start",
+    "start:dev": "yarn build:shared:cjs && NODE_ENV=development nest start --watch",
+    "start:debug": "yarn build:shared:cjs && NODE_ENV=development nest start --debug --watch",
     "deb": "ts-node-dev src/main.ts",
     "start:prod": "NODE_ENV=production node dist/main",
     "test": "jest",
