--- a/packages/apollo-shared/tsconfig.esm.json
+++ b/packages/apollo-shared/tsconfig.esm.json
@@ -3,12 +3,10 @@
   "compilerOptions": {
     "composite": true,
     "incremental": true,
-    "outDir": "./dist",
+    "outDir": "./esm",
     "rootDir": "./src",
-    "target": "ES2020",
-    "lib": ["ES2020"],
-    "module": "CommonJS",
-    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+    "target": "ESNext",
+    "tsBuildInfoFile": "./esm/tsconfig.tsbuildinfo",
   },
   "include": ["./src"],
 }
