--- a/packages/jbrowse-plugin-apollo/jbrowse_config.json
+++ b/packages/jbrowse-plugin-apollo/jbrowse_config.json
@@ -135,5 +135,13 @@
         }
       }
     }
-  ]
+  ],
+  "defaultSession": {
+    "name": "Apollo Demo",
+    "views": [
+      {
+        "type": "ApolloView"
+      }
+    ]
+  }
 }
