--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -57,6 +57,7 @@
   "peerDependencies": {
     "@jbrowse/core": "^1.5.2",
     "@material-ui/core": "^4.12.3",
+    "mobx": "^5.10.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
     "react": "^17.0.2"
@@ -71,6 +72,7 @@
     "@types/react": "^17.0.34",
     "cypress": "^8.7.0",
     "jest": "^27.3.1",
+    "mobx": "^5.10.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
     "npm-run-all": "4.1.5",
