--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "^1.6.4",
+    "cache-manager": "^3.6.0",
     "mobx-state-tree": "3.14.1",
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^6.0.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/cache-manager": "^3",
     "typescript": "4.4.4"
   },
   "peerDependencies": {
