--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -17,9 +17,13 @@
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "^1.6.4",
     "cache-manager": "^3.6.0",
+    "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
     "mobx-state-tree": "3.14.1",
+    "path": "^0.12.7",
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^6.0.0",
+    "tsconfig-paths": "^3.12.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
