--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/core": "^1.5.9",
+    "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
     "mobx-state-tree": "3.14.1",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
