ready for draft PR

--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "^1.6.4",
+    "@nestjs/common": "^8.3.1",
     "cache-manager": "^3.6.0",
     "fs": "^0.0.1-security",
     "fs.promises": "^0.1.2",
     "mobx-state-tree": "3.14.1",
     "path": "^0.12.7",
     "promise-fs": "^2.1.1",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^6.0.0",
     "tsconfig-paths": "^3.12.0",
