--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,9 +1,17 @@
 {
   "name": "apollo-shared",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./esm/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc"
+    "build": "yarn build:cjs && yarn build:esm",
+    "build:cjs": "tsc",
+    "build:esm": "tsc --project ./tsconfig.esm.json"
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
