--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,8 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
 
 yarnPath: .yarn/releases/yarn-3.1.0.cjs
+
+packageExtensions:
+  mobx-react@*:
+    peerDependencies:
+      react-dom: "*"
