--- a/packages/apollo-shared/tsconfig.json
+++ b/packages/apollo-shared/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "module":"CommonJS",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
   },
