--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -37,11 +37,10 @@
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^5.10.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.8.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
@@ -61,6 +60,7 @@
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/prop-types": "^15",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8",
     "jest": "^27.0.6",
