--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/cache-manager": "^3",
+    "@types/node": "^16.0.0",
     "mobx-state-tree": "3.14.1",
     "typescript": "4.4.4"
   },
