--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,14 +32,19 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/multer": "^1.4.7",
+    "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
+    "mobx": "^5.10.1",
+    "mobx-react": "^6.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.0.0",
+    "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
