--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,12 +16,26 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
-    "mobx-state-tree": "3.14.1",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/cache-manager": "^3",
+    "@types/node": "^16.0.0",
+    "mobx-state-tree": "3.14.1",
     "typescript": "4.4.4"
+  },
+  "peerDependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@mui/x-data-grid": "^4.0.0",
+    "mobx": "^5.0.0",
+    "mobx-react": "^6.0.0",
+    "mobx-state-tree": "^3.14.1",
+    "prop-types": "^15.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "rxjs": "^6.0.0"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
