--- a/packages/apollo-shared/tsconfig.json
+++ b/packages/apollo-shared/tsconfig.json
@@ -5,7 +5,9 @@
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ESNext",
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
+    "module":"CommonJS",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
   },
   "include": ["./src"],
