--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -52,6 +52,7 @@
     "@jbrowse/plugin-linear-genome-view": "^1.5.1",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
+    "file-saver": "^2.0.5",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
   },
@@ -71,6 +72,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@types/cypress": "^1.1.3",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "cypress": "^8.7.0",
