--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/config": "^1.0.3",
     "@nestjs/core": "^8.0.11",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@types/multer": "^1.4.7",
@@ -37,6 +38,7 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^5.10.1",
     "mobx-react": "^6.0.0",
+    "mongoose": "^6.2.4",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
