--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
