Add MongoDB development environment

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -16,3 +16,6 @@ APPLICATION_PORT = 3999
 CORS = true
 # Logger options. Possible values are : log, error, warn, debug, verbose
 LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
+
+# MongoDB connection
+MONGODB_URI = 'mongodb://localhost:27017/test'
