--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.205.2/containers/javascript-node-postgres
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.224.2/containers/javascript-node-mongo
 // Update the VARIANT arg in docker-compose.yml to pick a Node.js version
 {
   "name": "Apollo",
@@ -8,41 +8,22 @@
   "workspaceFolder": "/workspace",
 
   // Set *default* container specific settings.json values on container create.
-  "settings": {
-    "sqltools.connections": [
-      {
-        "name": "Container database",
-        "driver": "MySQL",
-        "previewLimit": 50,
-        "server": "localhost",
-        "port": 33060,
-        "database": "apollo",
-        "username": "apollo",
-        "password": "apollo123",
-        "connectionTimeout": 15,
-        "mysqlOptions": {
-          "authProtocol": "xprotocol"
-        }
-      }
-    ],
-    "sqltools.autoOpenSessionFiles": false
-  },
+  "settings": {},
 
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
     "dbaeumer.vscode-eslint",
-    "mtxr.sqltools",
-    "mtxr.sqltools-driver-mysql",
+    "mongodb.mongodb-vscode",
     "arcanis.vscode-zipfs",
     "eamodio.gitlens",
   ],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [3999, 3306],
+  "forwardPorts": [3999, 27017],
 
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "yarn install",
 
-  // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+  // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "node"
 }
