--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -16,3 +16,5 @@ APPLICATION_PORT = 3999
 CORS = true
 # Logger options. Possible values are : log, error, warn, debug, verbose
 LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
+# Database connection string
+DB_CONN_STR = 'mongodb+srv://apollo:apollo123@cluster0.8a7mi.mongodb.net/apolloDb?retryWrites=true&w=majority'
