Add mongoose-id-validator to RefSeq schema

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,3 +10,6 @@ packageExtensions:
   mobx-react@*:
     peerDependencies:
       react-dom: "*"
+  mongoose-id-validator@*:
+    peerDependencies:
+      mongoose: "*"
