--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/mongoose-id-validator": "^0.6.2",
     "@types/multer": "^1.4.7",
     "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
@@ -39,6 +40,7 @@
     "mobx": "^5.10.1",
     "mobx-react": "^6.0.0",
     "mongoose": "^6.2.7",
+    "mongoose-id-validator": "^0.6.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
