--- a/packages/apollo-shared/tsconfig.json
+++ b/packages/apollo-shared/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
