--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,6 +16,11 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
+    "@nestjs/common": "^8.2.3",
+    "@nestjs/core": "^8.0.11",
+    "@nestjs/mongoose": "^9.0.3",
+    "mongoose": "^6.2.7",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
   },
