Add apollo-schemas package

--- a/packages/apollo-shared/tsconfig.esm.json
+++ b/packages/apollo-shared/tsconfig.esm.json
@@ -1,12 +1,9 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "incremental": true,
     "outDir": "./esm",
-    "rootDir": "./src",
     "target": "ESNext",
-    "tsBuildInfoFile": "./esm/tsconfig.tsbuildinfo",
+    "lib": ["ESNext", "DOM"],
+    "module": "ESNext",
   },
-  "include": ["./src"],
 }
