--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "yarn build:cjs && yarn build:esm",
-    "build:cjs": "tsc",
+    "build:cjs": "tsc --build",
     "build:esm": "tsc --project ./tsconfig.esm.json"
   },
   "dependencies": {
