--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -28,10 +28,12 @@
     "@nestjs/config": "^1.0.3",
     "@nestjs/core": "^8.0.11",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@types/multer": "^1.4.7",
+    "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
     "dotenv": "^10.0.0",
