Add mongoose-id-validator to RefSeq schema

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -41,6 +41,7 @@
     "mobx": "^5.10.1",
     "mobx-react": "^6.0.0",
     "mongoose": "^6.2.6",
+    "mongoose-id-validator": "^0.6.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -60,6 +61,7 @@
     "@types/cache-manager": "^3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/mongoose-id-validator": "^0.6.2",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
