--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
+    "@nestjs/common": "^8.4.4",
+    "apollo-schemas": "workspace:^",
+    "mongoose": "^6.2.10",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
   },
