Synchronize structure with other modules

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -18,5 +18,4 @@ CORS = true
 LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
 
 # MongoDB connection
-MONGODB_URI = 'mongodb+srv://apollo:apollo123@cluster0.8a7mi.mongodb.net/apolloDb?retryWrites=true&w=majority'
-# MONGODB_URI = 'mongodb://localhost:27017/test'
+MONGODB_URI = 'mongodb://localhost:27017/test'
