--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -18,4 +18,5 @@ CORS = true
 LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
 
 # MongoDB connection
-MONGODB_URI = 'mongodb://localhost:27017/test'
+# MONGODB_URI = 'mongodb://localhost:27017/test'
+MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
