--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     restart: unless-stopped
     volumes:
       - mongodb-data:/data/db
+    command: --replSet rs0
     # Uncomment to change startup options
     # environment:
     #  MONGO_INITDB_ROOT_USERNAME: root
