--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
+    "apollo-schemas": "workspace:^",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
   },
@@ -23,6 +24,7 @@
     "@types/cache-manager": "^3",
     "@types/node": "^16.0.0",
     "mobx-state-tree": "3.14.1",
+    "mongoose": "^6.2.10",
     "typescript": "4.4.4"
   },
   "peerDependencies": {
