Add DetailsView, edit type, start and end from it

--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -60,6 +60,7 @@
     "@jbrowse/core": "^1.7.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "mobx": "^5.10.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
@@ -71,6 +72,8 @@
     "@jbrowse/development-tools": "^1.6.9",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@mui/x-data-grid": "^4.0.1",
     "@types/cypress": "^1.1.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
