--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -42,6 +42,7 @@
     "mobx-react": "^6.0.0",
     "mongoose": "^6.2.6",
     "mongoose-id-validator": "^0.6.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
