Add assembly from file (#96)
* init commit

* tmp commit

* ready for draft PR

* Add fasta test file

* tmp commit

* Works also with FASTA file. Fixed CHUNK_LEN issue

* Log all errors at debug level

* Register new changes

* Remove temporary testing code

* Use MongoDB session in change objects

Co-authored-by: Garrett Stevens <stevens.garrett.j@gmail.com>

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -10,3 +10,6 @@ MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
 
 # Output folder for uploaded files
 FILE_UPLOAD_FOLDER = './test/uploaded'
+
+# Reference sequence chunk size (optional)
+# CHUNK_SIZE = 5000
