--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -12,4 +12,4 @@ MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
 FILE_UPLOAD_FOLDER = './test/uploaded'
 
 # Reference sequence chunk size (optional)
-# CHUNK_SIZE = 5000
+CHUNK_SIZE = 61
