--- a/package.json
+++ b/package.json
@@ -42,8 +42,5 @@
   "resolutions": {
     "typescript": "4.4.4"
   },
-  "private": true,
-  "dependencies": {
-    "axios": "^0.27.2"
-  }
+  "private": true
 }
