--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -27,9 +27,9 @@
     "setup": "rimraf .jbrowse && jbrowse create .jbrowse",
     "clean": "rimraf dist",
     "start": "yarn clean && npm-run-all --parallel start:watch start:server",
-    "start:watch": "yarn build:shared:esm && rollup --config --watch",
+    "start:watch": "yarn build:shared && JB_NPM=false NODE_ENV=development rollup --config --watch",
     "start:server": "serve --cors --listen 9000 .",
-    "build": "yarn build:shared:esm && yarn clean && rollup --config",
+    "build": "yarn build:shared && yarn clean && rollup --config",
     "browse": "cp jbrowse_config.json .jbrowse/config.json && serve --listen 8999 .jbrowse",
     "test": "jest",
     "test:e2e": "start-test \"npm-run-all --parallel start browse\" \"9000|8999\" \"npm-run-all cypress:run\"",
@@ -71,7 +71,7 @@
   "devDependencies": {
     "@jbrowse/cli": "^2.0.1",
     "@jbrowse/core": "^2.0.1",
-    "@jbrowse/development-tools": "^1.6.9",
+    "@jbrowse/development-tools": "^2.0.0",
     "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^5.12.3",
     "@types/cypress": "^1.1.3",
