--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,17 +1,10 @@
 {
   "name": "apollo-shared",
   "main": "./dist/index.js",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./esm/index.js",
-      "require": "./dist/index.js"
-    }
-  },
   "scripts": {
-    "build": "yarn build:cjs && yarn build:esm",
-    "build:cjs": "tsc --build",
-    "build:esm": "tsc --project ./tsconfig.esm.json"
+    "start": "yarn clean && tsc --build --watch",
+    "build": "yarn clean && tsc --build",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
@@ -24,9 +17,11 @@
   "devDependencies": {
     "@nestjs/common": "^9.0.4",
     "@types/node": "^16.0.0",
+    "@types/rimraf": "^3",
     "@types/uuid": "^8",
     "mobx-state-tree": "^5.1.5",
     "mongoose": "^6.2.10",
+    "rimraf": "^3.0.2",
     "typescript": "4.4.4"
   },
   "peerDependencies": {
